# faraway-admin-panel

./: README.md  build-installer.bat  electron-builder.yml  next.config.ts  package-lock.json  package.json  rebuild-and-package.bat  run-faraway.bat
.github/workflows/: build-windows.yml  tauri-windows.yml
backend/: app.js  index.js
backend/Templates/: forgetPassword.html
backend/config/: cloudinary.js  db.js  s3.js
backend/controllers/: authController.js  blogController.js  yachtController.js
backend/functions/: logger.js
backend/middleware/: ApiError.middleware.js  helmet.middleware.js  rateLimiter.js  upload.middleware.js
backend/models/: blog.js  otp.js  user.js  yacht.js
backend/router/: auth.js  blog.js  index.js  yacht.js
backend/utils/: ApiError.js  Jwt.js  SuccessHandler.js  cache.js  cloudinaryUtil.js  errors.js  mapImageFilenamesToUrls.js  otp.js  paginate.js  s3Util.js  sendEmail.js  testS3Connection.js
backend/validations/: auth.validation.js  blog.validation.js  index.js  yacht.validation.js
electron/: backend-server.js  main.js  preload.js
public-tauri/: index.html
src-tauri/: .ci-trigger  Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/app/: StoreProvider.tsx  globals.css  layout.tsx  page.tsx
src/app/(auth)/: layout.tsx
src/app/(root)/: layout.tsx
src/common/Button/: index.tsx
src/common/GoogleButton/: index.tsx
src/common/Input/: index.tsx
src/common/Toggle/: index.tsx
tools/voice/: auto-speak-clipboard.ps1  dictate-to-caret.ps1  jarvis.ahk  list-voices.ps1  speak-clipboard.ps1  speak-text.ps1
(+76 files in other folders)
