[package]
name = "faraway-admin-tauri"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

tauri = { version = "1", features = [ "shell-all",
  "dialog-all",
  "clipboard-all"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
# Make the binary a bit smaller
opt-level = "s"
